--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "sections/layout";
 @import "sections/welcome";
 @import "shared/common";
-@import "bootstrap-sprockets";
+@import "sections/photobook";
 @import "bootstrap";
