--- a/app/assets/stylesheets/sections/welcome.scss
+++ b/app/assets/stylesheets/sections/welcome.scss
@@ -1,21 +1,3 @@
-
-body {
-    height: 3000px;
-}
-
-
-.topmenu {
-    height: 40px;
-    width: 100%;
-    background: #B76C80;
-    //background: #C00B26;
-
-}
-
-.topmenusrcoll {
-      position:fixed;
-      opacity: 0.6;
-}
 //.subheading{
 //    font-size:20px;
 //    color:white;
@@ -36,8 +18,11 @@ body {
 //     color:#fff;
 //     opacity:99;
 //}
-.text{
+body{
+  min-height: 600px;
 
+}
+.text{
   position:relative;   //重要使浮动
   padding:10px 0 0 5px;
   color:#F7F7F7;
@@ -49,23 +34,14 @@ text-align: center;
 }
 
 .bg{
-
   position: absolute;  //重要使浮动
-
   width:200px;  //具体设置
-
   height:40px;  //具体设置
-
   background-color: #730E15;
-
   FILTER:alpha(opacity=70);
-
   opacity:0.7;
-
   -moz-opacity:0.7;
-
   z-index: 1;
-
 }
 @media screen and (max-width: 780px)
 {
@@ -73,8 +49,7 @@ text-align: center;
     display: none;
   }
   .message{
-    margin-top: 20px;
-
+    margin-top: 10px;
   }
 }
 .logo {
@@ -118,9 +93,37 @@ text-align: center;
   img{
     max-width: 300px;
   }
+  .message-text{
+    padding: 5px;
+    background:#efefef;
+    border-radius: 15px;
+    font-size: 16px;
+    word-break:break-all;
+  }
 
 }
+
 .message{
-    margin-top: 80px;
-    margin-bottom: 20px;
+  margin-top: 80px;
+  margin-bottom: 20px;
+}
+
+.comments {
+   margin-top: 10px;
+  .headimg img{
+    width: 30px;
+    height: 30px;
+  }
+  .headimg{
+    margin-right: -30px;
+  }
+  .comment
+  {
+    margin-top: 5px;
+  }
+  .message-text{
+    padding: 5px;
+    font-size: 13px;
+    word-break:break-all;
+  }
 }
