--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-	<meta charset="UTF-8">
-	<title>This is KinUp</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	<%= stylesheet_link_tag "application" %>
-	<%= javascript_include_tag "application" %>
+  <meta charset="UTF-8">
+  <title>This is KinUp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <%= stylesheet_link_tag "application" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
-<body class="<%= params[:controller]+'-' + params[:action] %>" >
-<div class="topmenu"></div>
-<div class="jumbotron home-banner" data-stretch="/assets/banner.jpg">
+<body class="<%= params[:controller]+'-' + params[:action] %>">
+<div class="topmenu">
+  <div class="pull-right">
+    <% if current_user %>
+        <%= link_to current_user.username,"#" %>
+        <%= link_to "登出",logout_path  %>
+     <% else %>
+    <%= link_to "注册",signup_path %>
+    <%= link_to "登录",login_path%>
+    <% end %>
+  </div>
+
+</div>
+<div class="jumbotron home-banner" data-stretch="<%= image_url'banner.jpg'%>">
   <div class="container">
     <div class="row">
       <div class="col-sm-3">
@@ -21,8 +33,8 @@
         <div class="navbtn">
           <ul>
             <li>关于</li>
-            <li><a href="#">微博</a></li>
-            <li><a href="">相册</a></li>
+            <li><%= link_to "微博",root_path %></li>
+            <li><%= link_to "相册",photos_path%></li>
           </ul>
         </div>
       </div>
@@ -32,13 +44,43 @@
         <div class="bg"></div>
         <div class="text">分享您的快乐</div>
       </div>
-      <div class="col-sm-3"><a href="" class="btn btn-primary">分享快乐</a></div>
+      <div class="col-sm-3"><%= link_to "分享快乐", "#",class: "btn btn-primary", :data => {:toggle => "modal",:target=> current_user ?  ".issueModal":".loginModal"}%></div>
     </div>
   </div>
 </div>
-	<%= yield%>
-<div class="goBackTop">
-	回到顶部
+<%= yield %>
+
+<% if current_user %>
+    <%=  render partial: 'issues/new'%>
+<% else %>
+    <%= render partial:'users/loginform' %>
+<% end %>
+<div class="goBackTop" id="goBackTop">
+  <div class="arrow"></div>
+  <div class="stick"></div>
+  <div class="goToptext">回到顶部</div>
 </div>
+<%= render partial: 'shared/foot' %>
+            <!-- 单独获取csrf-token <%= form_authenticity_token.to_s %>-->
+<script>
+    $('.home-banner').anystretch();
+  $(".showhidecomment").click(function(){
+      var issueid = $(this).attr("data-issue");
+      var dom = $(this);
+      $.ajax({
+          url:"/comments/showcomments",
+          type:"post",
+          dataType:"html",
+          data:{issue_id:issueid},
+          success:function(data){
+              //console.log(data);
+
+              dom.parent().before(data);
+              dom.attr("data-type","close")
+              dom.hide();
+          }
+      });
+  });
+</script>
 </body>
 </html>
