--- a/app/views/page/welcome.html.erb
+++ b/app/views/page/welcome.html.erb
@@ -1,42 +1,3 @@
-
-
 <div class="container">
-  <div class="row message">
-    <div class="col-sm-1 headimg">
-      <img src="<%= image_url 'head.png' %>"/>
-    </div>
-    <div class="col-sm-11 context">
-      <h4>唐马儒:</h4>
-      <div class="">坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年
-        坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年
-        坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年</div>
-      <span>10分钟前</span>
-    </div>
-  </div>
-  <div class="row message">
-    <div class="col-sm-1 headimg">
-      <img src="<%= image_url 'head.png' %>"/>
-    </div>
-    <div class="col-sm-11 context">
-      <h4>唐马儒:</h4>
-      <div class="">坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年
-        坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年
-        坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年<img src="/assets/banner.jpg" alt=""/></div>
-      <span>10分钟前</span>
-    </div>
-  </div>
-  <div class="row message">
-    <div class="col-sm-1 headimg">
-      <img src="<%= image_url 'head.png' %>"/>
-    </div>
-    <div class="col-sm-11 context">
-      <h4>唐马儒:</h4>
-      <div class="">坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年
-        坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年
-        坚持做中国人自己的鉴黄事业，用心鉴黄，良心鉴黄，服务好每一位中国青少年</div>
-      <span>10分钟前</span>
-    </div>
-  </div>
-  <%= render partial:'issue_list',locals:{issues:@issues} %>
+  <%= render partial: 'issues/issue_list', locals: {issues: @issues} %>
 </div>
-<script> $('.home-banner').anystretch();</script>
