--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,5 @@
 @import "sections/welcome";
 @import "shared/common";
 @import "sections/photobook";
+@import "sections/photo";
 @import "bootstrap";
