--- a/app/views/photobook/showphotos.erb
+++ b/app/views/photobook/showphotos.erb
@@ -9,5 +9,5 @@
       <div><h3>没有相片，上传相片</h3></div>
   <% end %>
 </div>
-<%= render partial:'photobook/uploadphotos'%>
+<%= render partial:'photobook/uploadphotos',locals:{photobook: @photobook}%>
 
