--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <div class="topmenu">
   <div class="pull-right">
     <% if current_user %>
-        <%= link_to current_user.username,"#" %>
+        <%= link_to current_user.username,"/info" %>
         <%= link_to "登出",logout_path  %>
      <% else %>
     <%= link_to "注册",signup_path %>
