--- a/app/views/photobook/_uploadphotos.erb
+++ b/app/views/photobook/_uploadphotos.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/fine-uploader.css"/>
+<script src="/js/fine-uploader.js"></script>
 <div class="modal fade uploadphotoModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -6,31 +8,45 @@
         <h4 class="modal-title">上传照片</h4>
       </div>
       <div class="modal-body">
-        <div class="row fileupload-buttonbar">
-          <div class="col-lg-7">
-             <span class="btn btn-success fileinput-button">
-               <i class="glyphicon glyphicon-plus"></i>
-               <span>添加照片</span>
-               <input type="file" name="files[]" multiple=""/>
-             </span>
-            <button type="submit" class="btn btn-primary start">
-              <i class="glyphicon glyphicon-upload"></i>
-              <span>上传</span>
-            </button>
-          </div>
-          <div class="col-lg-5 fileupload-progress fade">
-            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100">
-              <div class="progress-bar progress-bar-success" style="width:0%;"></div>
+        <div id="thumbnail-fine-uploader"></div>
+        <script type="text/template" id="qq-simple-thumbnails-template">
+          <div class="qq-uploader-selector qq-uploader">
+            <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
             </div>
-            <div class="progress-extended"></div>
+            <div class="qq-upload-button-selector qq-upload-button">
+              <div>选择相片</div>
+            </div>
+    <span class="qq-drop-processing-selector qq-drop-processing">
+
+      <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
+    </span>
+            <ul class="qq-upload-list-selector qq-upload-list row">
+              <li class="col-sm-3">
+                <div class="qq-progress-bar-container-selector">
+                  <div class="qq-progress-bar-selector qq-progress-bar"></div>
+                </div>
+                <span class="qq-upload-spinner-selector qq-upload-spinner"></span>
+                <img class="qq-thumbnail-selector" qq-max-size="100" qq-server-scale>
+                <br/>
+                <span class="qq-upload-file-selector qq-upload-file"></span>
+                <br/>
+                <a class="qq-upload-cancel-selector qq-upload-cancel" href="#">Cancel</a>
+                <span class="qq-upload-size-selector qq-upload-size"></span>
+                <span class="qq-upload-status-text-selector qq-upload-status-text"></span>
+              </li>
+            </ul>
           </div>
-        </div>
+        </script>
+        <div class="clear"></div>
       </div>
       <div class="modal-footer">
+        <button id="edit-file-upload-trigger" class="btn btn-primary" >
+          上传
+        </button>
         <button type="button" class="btn btn-default"
                 data-dismiss="modal"> 关闭
         </button>
-
+      <input type="hidden" value="<%=@photobook.id%>" id="photo_id">
       </div>
     </div>
   </div>
