--- a/app/views/photo/_photolist.erb
+++ b/app/views/photo/_photolist.erb
@@ -1,7 +1,10 @@
-<div class="row">
+<div class="row photolist">
 <% photolist.each do |photo| %>
    <div class="col-sm-3 photo">
      <img src="<%= photo.path%>" alt=""/>
+     <div class="photoname">
+       <%= photo.filename%>
+     </div>
    </div>
 <% end %>
 </div>
