--- a/app/views/comments/_comments.erb
+++ b/app/views/comments/_comments.erb
@@ -1,12 +1,3 @@
 <% comments.each do |comment| %>
-<div class="row comment issue<%=comment.issue_id%>">
-  <div class="col-sm-1"></div>
-  <div class="col-sm-1 headimg">
-    <img src="<%= image_url 'head.png' %>"/>
-  </div>
-  <div class="col-sm-10">
-    <h5><%= comment.user.username%>:</h5>
-    <div class="well well-sm"><%= comment.comment %></div>
-  </div>
-</div>
+<%= render partial: 'comments/comment', locals: {comment:comment} %>
 <%end%>
