--- a/app/views/comments/_comment.erb
+++ b/app/views/comments/_comment.erb
@@ -1,7 +1,7 @@
 <div class="row comment issue<%=comment.issue_id%>">
       <div class="col-sm-1"></div>
       <div class="col-sm-1 headimg">
-        <img src="<%= image_url 'head.png' %>"/>
+        <%= image_tag comment.user.avatar_url(:small) || image_url("head.png") if comment.user.avatar%>
       </div>
       <div class="col-sm-10">
         <h5><%= comment.user.username%>:</h5>
