--- a/app/views/photobook/showphotos.erb
+++ b/app/views/photobook/showphotos.erb
@@ -10,4 +10,4 @@
   <% end %>
 </div>
 <%= render partial:'photobook/uploadphotos',locals:{photobook: @photobook}%>
-
+<%= render partial:'photobook/showphotos.js'%>
